--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ textarea {
    height: 80px;
    position:fixed;
    border:1px solid red;
+ 
 }
  .entete, #menu
 {
@@ -130,12 +131,42 @@ textarea {
 {
      background-color:white;
 }
+          /*-------------------style intro section----------------*/
+
+#intro
+{
+   background-color:#160b0b;
+   height: 600px;
+   border:1px solid green;
+   
+}
+.titre
+{
+    color:#f5c4c2;
+}
+.apropos
+{
+    
+    font-size:15px;
+    font-family: tahoma;
+    color: #f5c4c2;
+    
+    text-align: justify;
+    /*box-shadow: 10px 2px 2px #888888;*/
+
+}
+#intro .titre1
+{
+    color:#f5c4c2; 
+}
 
 
 
-
-
-
+#aboutme
+{
+    background-color: #ba6161;
+    height: 600px;
+}
 
 
 
