--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ textarea {
    height: 80px;
    position:fixed;
    border:1px solid red;
+   z-index: 100;
  
 }
  .entete, #menu
@@ -160,15 +161,35 @@ textarea {
     color:#f5c4c2; 
 }
 
-
+                /*------- ---Style aboutme section----------*/
 
 #aboutme
 {
     background-color: #ba6161;
     height: 600px;
 }
+.aboutright
+{
+    background: url('../img/about-background.jpg') center no-repeat  fixed;
+    background-size: cover;
+    height: 100%;
+}
 
-
+.aboutleft h3
+{
+    font-size: 1.2em;
+    background-color: #DD95A7;
+     width: 200px;
+    font-family: 'Merriweather', serif;
+    font-weight: 700;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 30px;
+     text-align: center;
+    display: block;
+    margin:35px auto 50px auto;
+    
+}
 
 
 
