style realisation for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -103,13 +103,12 @@ textarea {
    
    height: 80px;
    position:fixed;
-   border:1px solid red;
    z-index: 100;
  
 }
  .entete, #menu
 {
-   background-color: #ba6161;
+   background-color:rgb(85,0,0);
 }
 .entete h1
 
@@ -120,14 +119,22 @@ textarea {
 
 }
 
-#menu li a 
+#menu li a, .entete h1  
 {
-    color: #160b0b;
+    color: rgb(245,196,194);
 }
 #menu li:hover a
 {
     color:white;
-} 
+}
+
+/*#menu .navbar-collapse
+{
+  width: 100%;
+  height: 100vh;
+   margin-top: 80px;
+}
+*/
 .btn-white 
 {
      background-color:white;
@@ -136,14 +143,20 @@ textarea {
 
 #intro
 {
-   background-color:#160b0b;
+   background-image:url("../img/about-background.jpg");
+   background-size: cover;
    height: 600px;
    border:1px solid green;
 
 }
+.intro-cover
+{
+    background-color: rgba(245,196,194,0.5);
+    width: 100%;
+}
 .titre1
 {
-    color:#f5c4c2; 
+    color:rgb(85,0,0); 
      font-size: 40px;
      font-family: 'Russo One', sans-serif;
 
@@ -153,7 +166,7 @@ textarea {
     
     font-size:20px;
     font-family:'Exo', sans-serif;
-    color:white;
+    color:black;
     line-height: 3em;
     text-align: justify;
     /*box-shadow: 10px 2px 2px #888888;*/
@@ -178,13 +191,13 @@ textarea {
 
 #aboutme
 {
-    background-color: #ba6161;
+    background-color: black;
     /*height: 600px;*/
 }
 .aboutright
 {
-    background: url('../img/about-background.jpg') center no-repeat  fixed;
-    background-size: cover;
+    
+   
     height: 100%;
 }
 
@@ -214,7 +227,7 @@ textarea {
     background-color: white;
     margin: 30px auto;
     padding: 15px;
-    opacity: 0.5;
+    opacity: 0.8;
     width: 70%;
     border: 1px solid transparent;
     border-radius:8px;
@@ -226,11 +239,54 @@ textarea {
     font-weight: bold;
 }
 
+        /*---------------Style Competence section-----------------*/
 
+#portfolio
+{
+    background-color: rgb(85,0,0);
+    /*height: 500px;*/
+    color: #DD95A7;
+    font-family: 'Alegreya', serif;
+}
+.reproduction ul
+{
+  list-style-type: none;
+}
+.reproduction ul li
+{
 
+  width: 100%;
+  height: 400px;
 
-
-
+}
+.proj-1, .proj-2, .proj-3, .proj-4
+{
+    /*background-position:center center*/;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 3px solid black;
+}    
+.proj-1
+{
+    background-image: url('../img/coachspotifmobile.png');
+    
+}
+.proj-2
+{
+    background-image: url('../img/tatoeurmobile.png');
+}
+.proj-3
+{
+    background-image: url('../img/blomberiemobile.png');
+}
+.proj-4
+{
+    background-image: url('../img/Cappiscinemobile.png');
+}
+.reproduction ul li a
+{
+    text-decoration: none;
+}  
 
 /* ==========================================================================
    Helper classes
