--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ textarea {
    background-size: cover;
    height: 600px;
    border:1px solid green;
+   padding-top: 80px;
 
 }
 .intro-cover
@@ -169,8 +170,14 @@ textarea {
     color:black;
     line-height: 3em;
     text-align: justify;
+    
     /*box-shadow: 10px 2px 2px #888888;*/
 
+}
+.apropos p
+{
+    padding-right: 5px;
+    padding-left: 5px;
 }
 .icone
 {
@@ -194,11 +201,9 @@ textarea {
     background-color: black;
     /*height: 600px;*/
 }
-.aboutright
+#aboutme .aboutleft
 {
-    
-   
-    height: 100%;
+  margin: auto;
 }
 
 .aboutleft h3
@@ -206,7 +211,7 @@ textarea {
     font-size: 1.2em;
     background-color: #DD95A7;
      width: 200px;
-    font-family: 'Merriweather', serif;
+    font-family: 'Alegreya', serif;
     font-weight: 700;
     height: 40px;
     line-height: 40px;
@@ -214,23 +219,30 @@ textarea {
      text-align: center;
     display: block;
     margin:50px auto 50px auto;
+    margin: auto;
     
 }
 
-#aboutme .aboutright
+#aboutme #allcursus
 {
     
      border:1px solid red;
+     margin: auto;
+     width: 95%;
  }
-#aboutme .cursus
+#aboutme #allcursus  .cursus
+
 {
     background-color: white;
     margin: 30px auto;
     padding: 15px;
     opacity: 0.8;
-    width: 70%;
+    max-width: 85%;
+    font-size: 19px;
     border: 1px solid transparent;
     border-radius:8px;
+    font-family: 'Alegreya', serif;
+
 }
 #aboutme .cursus .titrecursus
 {
@@ -243,50 +255,150 @@ textarea {
 
 #portfolio
 {
-    background-color: rgb(85,0,0);
+    background-color: black;
     /*height: 500px;*/
-    color: #DD95A7;
+    color: white;
     font-family: 'Alegreya', serif;
 }
-.reproduction ul
+.projets
 {
-  list-style-type: none;
+    margin: auto;
+    border: 2px solid red;
+    padding-bottom: 20px;
 }
-.reproduction ul li
+.projets .reproduction, .projets .creation
 {
-
-  width: 100%;
-  height: 400px;
-
+    margin: auto;
+    width: 100%;
 }
-.proj-1, .proj-2, .proj-3, .proj-4
-{
-    /*background-position:center center*/;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: 3px solid black;
-}    
-.proj-1
-{
-    background-image: url('../img/coachspotifmobile.png');
+.proj
+{  
     
-}
-.proj-2
-{
-    background-image: url('../img/tatoeurmobile.png');
-}
-.proj-3
-{
-    background-image: url('../img/blomberiemobile.png');
-}
-.proj-4
-{
-    background-image: url('../img/Cappiscinemobile.png');
-}
-.reproduction ul li a
+    margin-bottom: 0px;
+} 
+.proj a 
 {
     text-decoration: none;
 }  
+.proj a img
+{
+  border: 3px solid black;
+  opacity:.66;
+  /*margin-left: 10px;
+  margin-right: 10px;*/
+    
+}
+.projet-description
+{
+  transition: all 0.8s  ease-in;
+  opacity: 0;
+  position: absolute;
+  bottom: -50px;
+  background-color: rgba(11,11,11,.9); 
+  /*transform: translate(-50%, -50%);*/
+}
+
+.projet-description .projet-description-contenu
+{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
+  padding: 20px 40px;
+  text-align: center;
+  top: 5%;
+   transition: all 0.8s  ease-in;
+  transform: translateY(0);
+  /*opacity: 0;*/
+   color:#DD95A7;
+   font-size: 18px;
+   font-family: 'Alegreya', serif;
+    letter-spacing: .2em;
+
+}
+.projet-description-contenu h4
+{
+ 
+  
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0;
+ color:#DD95A7;
+ }
+
+.titre-1
+{
+  font-weight: 400;
+ 
+
+} 
+.sous-titre
+{
+  width: 20%;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+ .proj:hover  .projet-description
+
+{
+     opacity: 1;
+     top: 0px;
+      left:0;
+      width: 100%;
+      height: 100%;
+   
+}
+.proj:hover img
+{
+   -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    opacity:1;
+}
+
+
+
+
+
+
+ /* ==========================================================================
+                        STYLE FOR TABLETTE
+   ========================================================================== */
+
+
+
+
+                          
+
+@media  (min-width: 720px)
+{
+
+.proj a img
+{
+  border: 3px solid black;
+  
+  
+}
+
+}
+
+
+ /* ==========================================================================
+                        STYLE FOR DESKTOP
+ ========================================================================== */
+
+@media  (min-width: 1000px)
+{
+
+.projet-description .projet-description-contenu
+{
+   top:0%; 
+   padding: 0px 10px;
+ }
+    
+}
 
 /* ==========================================================================
    Helper classes
