--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,11 @@ textarea {
   font-family: 'Permanent Marker', cursive;
 
 }
+#menu li a
+{
+   font-family: 'Alegreya', serif;
+   font-size: 20px;
+}
 
 #menu li a, .entete h1  
 {
@@ -145,14 +150,14 @@ textarea {
 {
    background-image:url("../img/about-background.jpg");
    background-size: cover;
+   background-position: center right;
    height: 600px;
-   border:1px solid green;
    padding-top: 80px;
 
 }
 .intro-cover
 {
-    background-color: rgba(245,196,194,0.5);
+    background-color: rgba(245,240,240,0.5);
     width: 100%;
 }
 .titre1
@@ -170,9 +175,7 @@ textarea {
     color:black;
     line-height: 3em;
     text-align: justify;
-    
-    /*box-shadow: 10px 2px 2px #888888;*/
-
+   
 }
 .apropos p
 {
@@ -225,8 +228,7 @@ textarea {
 
 #aboutme #allcursus
 {
-    
-     border:1px solid red;
+        
      margin: auto;
      width: 95%;
  }
@@ -263,7 +265,6 @@ textarea {
 .projets
 {
     margin: auto;
-    border: 2px solid red;
     padding-bottom: 20px;
 }
 .projets .reproduction, .projets .creation
@@ -295,6 +296,7 @@ textarea {
   position: absolute;
   bottom: -50px;
   background-color: rgba(11,11,11,.9); 
+  overflow: hidden;
   /*transform: translate(-50%, -50%);*/
 }
 
@@ -314,6 +316,7 @@ textarea {
    font-size: 18px;
    font-family: 'Alegreya', serif;
     letter-spacing: .2em;
+
 
 }
 .projet-description-contenu h4
@@ -342,11 +345,12 @@ textarea {
  .proj:hover  .projet-description
 
 {
-     opacity: 1;
-     top: 0px;
+     
+      top: 0px;
       left:0;
       width: 100%;
       height: 100%;
+      opacity: 1;
    
 }
 .proj:hover img
@@ -379,8 +383,14 @@ textarea {
 {
   border: 3px solid black;
   
-  
 }
+
+#aboutme #allcursus  .cursus
+{
+
+  min-width: 45%;
+}
+
 
 }
 
@@ -392,7 +402,7 @@ textarea {
 @media  (min-width: 1000px)
 {
 
-.projet-description .projet-description-contenu
+  .projet-description .projet-description-contenu
 {
    top:0%; 
    padding: 0px 10px;
