--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ textarea {
 #portfolio
 {
     background-color: black;
-    /*height: 500px;*/
+    width: 100%;
     color: white;
     font-family: 'Alegreya', serif;
 }
@@ -365,6 +365,7 @@ textarea {
   height: 150px;
   background-color: rgb(85,0,0);
   color: white;
+  padding-bottom: 100px;
 }
  .element
 {
@@ -455,6 +456,7 @@ textarea {
 {
   background-color: black;
   height: 200px;
+  color: white;
 }   
 
 
