--- a/css/main.css
+++ b/css/main.css
@@ -98,39 +98,36 @@ textarea {
                  /*----------------Style for header-------------------*/
 
 
-.entete
+.navbar
 {
-   
-   height: 80px;
-   position:fixed;
-   z-index: 100;
- 
-}
- .entete, #menu
-{
-   background-color:rgb(85,0,0);
-}
-.entete h1
+ background-color:#F2C335;
+}  
+
+  #menu1
 
 {
-  font-size: 20px;
-  margin-top: 20px;
-  font-family: 'Permanent Marker', cursive;
-
+  
+   opacity: 0.9;
+   /*height: 80px;*/
+   /*position:fixed;*/
+   /*z-index: 100;*/
 }
-#menu li a
+
+#menu1 li a
 {
-   font-family: 'Alegreya', serif;
+   font-family: 'Noto Serif', serif;;
    font-size: 20px;
+
 }
 
-#menu li a, .entete h1  
+#menu1 li a
 {
-    color: rgb(245,196,194);
+    color: black;
 }
-#menu li:hover a
+#menu1 li:hover a
 {
-    color:white;
+    color:#735C19;
+    font-weight: bold;
 }
 
 /*#menu .navbar-collapse
@@ -151,21 +148,40 @@ textarea {
    background-image:url("../img/about-background.jpg");
    background-size: cover;
    background-position: center right;
-   height: 600px;
-   padding-top: 80px;
+   opacity: 0.85;
+   
+
+   height: 100%;
 
 }
 .intro-cover
 {
+    height: 600px;
+   /* width: 100%;
+    height: 100%;*/
     background-color: rgba(245,240,240,0.5);
-    width: 100%;
+       /*padding-top: 80px;*/
+}
+.titre1, .titre2
+{
+    color:rgb(244,243,242); 
+     font-size: 40px;
+     
+
+     /*font-family: 'Russo One', sans-serif;*/
+
 }
 .titre1
 {
-    color:rgb(85,0,0); 
-     font-size: 40px;
-     font-family: 'Russo One', sans-serif;
-
+   font-family: 'Noto Serif', cursive;
+    color:#D9E33B;
+    font-size: 2em;
+  /*color: rgb(243,200,65);*/
+}
+.titre2
+{
+  font-family: 'Noto Serif', sans-serif;
+  color: black;
 }
 .apropos
 {
@@ -187,7 +203,7 @@ textarea {
 
 #aboutme
 {
-    background-color: black;
+    background-color:rgb(143,138,141);
     /*height: 600px;*/
 }
 #aboutme .aboutleft
@@ -195,10 +211,10 @@ textarea {
   margin: auto;
 }
 
-.aboutleft h3
+.titre3
 {
     font-size: 1.2em;
-    background-color: #DD95A7;
+    background-color:rgb(244,243,242);
      width: 200px;
     font-family: 'Alegreya', serif;
     font-weight: 700;
@@ -241,13 +257,18 @@ textarea {
 
         /*---------------Style Competence section-----------------*/
 
-#portfolio
+#portfolio, #competence
 {
     background-color: black;
     width: 100%;
     color: white;
     font-family: 'Alegreya', serif;
 }
+#portfolio h2, #competence h2
+{
+  color: rgb(243,200,72);
+}
+
 .projets
 {
     margin: auto;
@@ -297,7 +318,7 @@ textarea {
   top: 5%;
    transition: all 0.8s  ease-in;
   transform: translateY(0);
-   color:#DD95A7;
+   color:#F27B27;
    font-size: 18px;
    font-family: 'Alegreya', serif;
     letter-spacing: .2em;
@@ -314,6 +335,15 @@ textarea {
 
  }
 
+.colicone
+{
+  color: rgb(243,200,72);
+}
+
+.comptitre
+{
+     font-size: 2em;
+}
 .titre-1
 {
   font-weight: 400;
@@ -363,8 +393,8 @@ textarea {
 .titrecontact
 {
   height: 150px;
-  background-color: rgb(85,0,0);
-  color: white;
+  background-color: rgb(242,195,53);
+  color: black;
   padding-bottom: 100px;
 }
  .element
@@ -383,13 +413,13 @@ textarea {
       border: 1px solid transparent;
       height: 50px;
       width: 50px;
-       background-color:rgb(85,0,0) ;
+       background-color:black ;
       margin-bottom:  20px  ;
 
 }
 .icone a i
 {
-        color: white;
+        color: rgb(242,195,53);
         margin-top: 10px;
        font-size: 22px; 
     
@@ -414,8 +444,8 @@ textarea {
 }   
 .formulaire .btn
 {
-  background-color: rgb(221,149,167);
-  color: black;
+  background-color: black;
+  color: white;
   width: 150px;
   transition: all 1s ease-in;
 
